# hook-test

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml
hook/: pre-commit
pre_commit_hook/: __init__.py  colors.py  configs.py  dependencies.py  errors.py  git.py  logging.py  post_commit.py  pre_commit.py  requests.py  tmp_file.py  utils.py
