[tool.poetry]
name = "pre_commit_hook"
version = "1.0.0"
description = "OPSIT pre-commit hooks for check dependencies versions."
authors = ["OpsIT <operations.it@mercadolibre.com>"]

[[tool.poetry.source]]
name = "meli-pypi"
url = "https://pypi.artifacts.furycloud.io/simple/"

[tool.poetry.dependencies]
python = "^3.7"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
uuid = "^1.30"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]  # PEP 508 specifications.
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pre_commit_hook = 'pre_commit_hook.pre_commit:main'

[tool.pytest.ini_options]
addopts = "--verbose --junit-xml=report.xml"